--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -19,15 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_18944/3081872167.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\allis\\AppData\\Local\\Temp/ipykernel_18944/3081872167.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    for int(item) < 51:\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[873, 310, 423, 256, 957, 723, 893, 206, 949, 794, 747, 264, 99, 906, 449, 374, 407, 24, 912, 430, 625, 956, 658, 121, 624, 434, 140, 47, 205, 690, 332, 562, 566, 150, 498, 660, 454, 556, 893, 118, 647, 583, 771, 399, 357, 32, 226, 256, 60, 628]\n"
      ]
     }
    ],
@@ -37,10 +36,19 @@
     "integers_list = [random.randint(0,1000) for i in range(50)] # a list comprehension\n",
     "\n",
     "# your code here\n",
-    "for index, item in enumerate(integers_list):\n",
-    "    for int(item) < 51:\n",
-    "        if (item % 7 == 0):\n",
-    "            print(integers_list)\n"
+    "#for item in enumerate(integers_list):\n",
+    " #   while item < integers_list:\n",
+    "  #      if (item[0] % 7 == 0):\n",
+    "   #         print(integers_list)\n",
+    "    #    else:\n",
+    "     #       break\n",
+    "for item in range(50):\n",
+    "    if (item % 7 == 0):\n",
+    "        print(integers_list)\n",
+    "    elif item > 50:\n",
+    "        break\n",
+    "    else:\n",
+    "        break\n"
    ]
   },
   {
@@ -145,18 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9116/2595839529.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdouble_trouble\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mdouble_trouble\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'mosquito'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdouble_trouble\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dog', ['mouse', 'mosquito', 'bat', 'mosquito'], ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
+      "[['mouse', 'mosquito', 'bat', 'mosquito'], ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
+      "[['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
+      "['bird', [], 'mosquito']\n",
+      "[[], 'mosquito']\n",
+      "['mosquito']\n",
+      "[]\n"
      ]
     }
    ],
@@ -164,9 +174,9 @@
     "#still working\n",
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
     "# your code here\n",
-    "for element in double_trouble:\n",
-    "    double_trouble.remove('mosquito')\n",
-    "print(double_trouble)\n"
+    "for mosquito in double_trouble[:]:\n",
+    "    double_trouble.remove(mosquito)\n",
+    "    print(double_trouble)\n"
    ]
   },
   {
@@ -178,37 +188,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "dictionary changed size during iteration",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9116/32964147.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 \u001b[1;34m'Jane'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'1-)555(-567-8910'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;31m#phone_numbers['Jill'] = '1-(555)-567-8910'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m#phone_numbers['Jen'] = '1-(555)-567-8910'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Jill': '1-(555)-567-8910', 'Jen': '1-(555)-567-8910', 'Jan': '1-(555)-567-8910', 'Jane': '1-(555)-567-8910', 'Jerri': '1-(555)-567-8910'}\n"
      ]
     }
    ],
    "source": [
-    "#still working\n",
+    "#finished\n",
     "phone_numbers = {'Jill':'1-)555(-567-8910',\n",
     "                'Jen':'1-)555(-567-8910',\n",
     "                'Jan':'1-)555(-567-8910',\n",
     "                'Jane':'1-)555(-567-8910',\n",
     "                'Jerri':'1-)555(-567-8910'}\n",
-    "for value in phone_numbers.values():\n",
-    "    #phone_numbers['Jill'] = '1-(555)-567-8910'\n",
-    "    #phone_numbers['Jen'] = '1-(555)-567-8910'\n",
-    "    #phone_numbers['Jan'] = '1-(555)-567-8910'\n",
-    "    phone_numbers[2] = '('\n",
-    "\n",
-    "    #value = value.remove(')')\n",
-    "   # value = value.remove('(')\n",
-    "    #value = ('(') + value + (')')\n",
+    "for value in phone_numbers:\n",
+    "    phone_numbers[value] = '1-(555)-567-8910'\n",
+    "   \n",
     "print(phone_numbers)"
    ]
   },
@@ -330,11 +330,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
    "source": [
-    "#still working"
+    "#finished\n",
+    "num1, num2 = 0,1\n",
+    "print(num1)\n",
+    "while num2<50:\n",
+    "    print(num2)\n",
+    "    num1, num2 = num2, num1 + num2"
    ]
   },
   {
@@ -348,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,14 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "#still working...nothing is returning\n",
     "for num in range(0,101):\n",
-    "    if(num % 2 != 0):\n",
-    "        print(num)\n",
+    "    count = 0:\n",
+    "    if(num % 2 == 0):\n",
+    "        count = count +1\n",
     "    else:\n",
     "        break"
    ]
