turning in homework

--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -19,36 +19,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[873, 310, 423, 256, 957, 723, 893, 206, 949, 794, 747, 264, 99, 906, 449, 374, 407, 24, 912, 430, 625, 956, 658, 121, 624, 434, 140, 47, 205, 690, 332, 562, 566, 150, 498, 660, 454, 556, 893, 118, 647, 583, 771, 399, 357, 32, 226, 256, 60, 628]\n"
+      "0\n",
+      "7\n",
+      "14\n",
+      "21\n",
+      "28\n",
+      "35\n",
+      "42\n",
+      "49\n"
      ]
     }
    ],
    "source": [
-    "# COME BACK TO THIS ONE\n",
     "import random\n",
     "integers_list = [random.randint(0,1000) for i in range(50)] # a list comprehension\n",
     "\n",
     "# your code here\n",
-    "#for item in enumerate(integers_list):\n",
-    " #   while item < integers_list:\n",
-    "  #      if (item[0] % 7 == 0):\n",
-    "   #         print(integers_list)\n",
-    "    #    else:\n",
-    "     #       break\n",
-    "for item in range(50):\n",
-    "    if (item % 7 == 0):\n",
-    "        print(integers_list)\n",
-    "    elif item > 50:\n",
-    "        break\n",
+    "for item in enumerate(integers_list):\n",
+    "    if (item[0] % 7 != 0):\n",
+    "        item[0]\n",
+    "    elif (item[0] % 7 == 0):\n",
+    "        print(item[0])\n",
     "    else:\n",
-    "        break\n"
+    "        break\n",
+    "\n",
+    "##trying other things\n",
+    "#div_list = [7]\n",
+    "#check = [(element for element in integers_list if all(element % i == 0 for i in integers_list))]\n",
+    "#print(check)\n",
+    "\n",
+    "#for item in enumerate(integers_list, 50):\n",
+    "    #if (item[0] % 7 == 0):\n",
+    "        print(integers_list)\n",
+    "    #else:\n",
+    "        #break\n",
+    "#for item in range(50):\n",
+    "    #if (item % 7 == 0):\n",
+    "        #print(integers_list)\n",
+    "    #elif item > 50:\n",
+    "        #break\n",
+    "    #else:\n",
+    "        #break\n"
    ]
   },
   {
@@ -78,7 +96,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "colors = {'blue', 'purple', 'green', 'yellow', 'black'}\n",
     "for c in colors:\n",
     "    colors = (c.capitalize())\n",
@@ -106,7 +123,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "asterisk = 'My *compu*ter has go*ne craz***y an*d add*ed extra *symbols.*'\n",
     "# your code here\n",
     "\n",
@@ -135,7 +151,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "counter = 0\n",
     "# your code here\n",
     "while counter < 7:\n",
@@ -153,20 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dog', ['mouse', 'mosquito', 'bat', 'mosquito'], ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
-      "[['mouse', 'mosquito', 'bat', 'mosquito'], ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
-      "[['elephant', 'dog', 'whale', 'lion', 32, 'mosquito'], 'bird', [], 'mosquito']\n",
-      "['bird', [], 'mosquito']\n",
-      "[[], 'mosquito']\n",
-      "['mosquito']\n",
-      "[]\n"
+      "[('c', 'a', 't'), ('d', 'o', 'g'), ('mouse', 'bat'), ('elephant', 'dog', 'whale', 'lion', 32), ('b', 'i', 'r', 'd'), (), ('m', 'o', 's', 'q', 'u', 'i', 't', 'o')]\n"
      ]
     }
    ],
@@ -174,9 +183,14 @@
     "#still working\n",
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
     "# your code here\n",
-    "for mosquito in double_trouble[:]:\n",
-    "    double_trouble.remove(mosquito)\n",
-    "    print(double_trouble)\n"
+    "double_trouble = [tuple(word for word in elem if word != 'mosquito') for elem in double_trouble]\n",
+    "print(double_trouble)\n",
+    "\n",
+    "#previously tried code\n",
+    "#for word in enumerate(double_trouble):\n",
+    " #   if str(word) == 'mosquito':\n",
+    "  #      double_trouble.remove(word)\n",
+    "#print(double_trouble)\n"
    ]
   },
   {
@@ -200,7 +214,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "phone_numbers = {'Jill':'1-)555(-567-8910',\n",
     "                'Jen':'1-)555(-567-8910',\n",
     "                'Jan':'1-)555(-567-8910',\n",
@@ -241,7 +254,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "first = input('Enter an integer ')\n",
     "second = input('Enter another integer ')\n",
     "two_num = int(first) + int(second)\n",
@@ -274,7 +286,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "character = (\"this string has %^&! some weird values02\")\n",
     "all_alphanum = ''.join(x for x in character if x.isalnum())\n",
     "print(all_alphanum)\n"
@@ -312,7 +323,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "#Celsius = (Fahrenheit – 32) * 5/9\n",
     "#Fahrenheit = (Celsius * 9/5) + 32\n",
     "\n",
@@ -351,7 +361,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "num1, num2 = 0,1\n",
     "print(num1)\n",
     "while num2<50:\n",
@@ -370,19 +379,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 240,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function second_function at 0x000002867FA2A430>\n"
+     ]
+    }
+   ],
    "source": [
     "#still working\n",
     "# you do the first function\n",
-    "def some_function(a, b):\n",
+    "def first_function(a,b):\n",
     "    return a + b\n",
+    "    \n",
     "# second function\n",
     "# Here's some starter code to avoid confusion.\n",
     "# Functions can be passed around like any other object. \n",
-    "def second_function(a,b,some_function):\n",
-    "    pass"
+    "def second_function(c):\n",
+    "    return c ** 2\n",
+    "\n",
+    "equation = [first_function, second_function]\n",
+    "a = 1\n",
+    "b = 4\n",
+    "c = 5\n",
+    "\n",
+    "\n",
+    "print(second_function)\n",
+    "\n"
    ]
   },
   {
@@ -401,17 +428,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n",
+      "51\n",
+      "53\n",
+      "55\n",
+      "57\n",
+      "59\n",
+      "61\n",
+      "63\n",
+      "65\n",
+      "67\n",
+      "69\n",
+      "71\n",
+      "73\n",
+      "75\n",
+      "77\n",
+      "79\n",
+      "81\n",
+      "83\n",
+      "85\n",
+      "87\n",
+      "89\n",
+      "91\n",
+      "93\n",
+      "95\n",
+      "97\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
-    "#still working...nothing is returning\n",
     "for num in range(0,101):\n",
-    "    count = 0:\n",
+    "    count = 0\n",
     "    if(num % 2 == 0):\n",
     "        count = count +1\n",
     "    else:\n",
-    "        break"
+    "        print(num)"
    ]
   },
   {
@@ -435,7 +518,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "def non_creative():\n",
     "    print('I am tried, so this is a lazy, non-creative function. Sorry!')\n",
     "non_creative()"
@@ -452,19 +534,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Allison', 'educator', 'USA', 33)\n"
+      "33\n"
      ]
     }
    ],
    "source": [
-    "#finished\n",
     "class Person():\n",
     "    \n",
     "    def __init__(self, name, occupation, country, age):\n",
@@ -474,8 +555,8 @@
     "        # you attribute goes here\n",
     "        self.age = age\n",
     "    \n",
-    "    Person = ('Allison', 'educator', 'USA', 33)\n",
-    "    print(Person)\n"
+    "    myself = Person('Allison', 'educator', 'USA', 33)\n",
+    "    print(myself.age)\n"
    ]
   },
   {
@@ -493,19 +574,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Candy object at 0x0000024C41612700>\n"
+      "<__main__.Candy object at 0x000002867F7724F0>\n"
      ]
     }
    ],
    "source": [
-    "#finished...?\n",
     "class Candy():\n",
     "    \n",
     "    def __init__(self, kind='chocolate', brand= 'Nestle', caramel = False):\n",
@@ -539,23 +619,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Greet' object has no attribute 'greet_method'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9116/2654295757.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mjen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGreet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgreet_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Greet' object has no attribute 'greet_method'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Jennifer\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "#still working\n",
     "class Greet():\n",
     "    \n",
     "    def __init__(self, name='Jennifer', language='english', greeting=\"Hello\"):\n",
@@ -567,10 +643,10 @@
     "        \n",
     "    # Your method here\n",
     "    def greet(self):\n",
-    "        print('Hello ', {name})\n",
+    "        print('Hello', self.name)\n",
     "        \n",
-    "jen = Greet()\n",
-    "print(jen.greet_method())"
+    "    jen = Greet()\n",
+    "    print(jen.greet())\n"
    ]
   },
   {
@@ -599,7 +675,6 @@
     }
    ],
    "source": [
-    "#finished\n",
     "class Employee():\n",
     "    \n",
     "    # class variables. Applies to all instances of this class during creation.\n",
@@ -639,9 +714,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meryl Streep: This is my line...\n",
+      "She is famous.\n"
+     ]
+    }
+   ],
    "source": [
     "class actress():\n",
     "    def __init__(self, name = 'Meryl Streep'):\n",
@@ -651,9 +735,11 @@
     "        print(f'{self.name}: {line}')\n",
     "        \n",
     "    # your static method goes here.\n",
-    "        \n",
+    "    def static_method(x):\n",
+    "        print(x)\n",
     "meryl = actress()\n",
-    "meryl.act('This is my line...')"
+    "meryl.act('This is my line...')\n",
+    "actress.static_method('She is famous.')"
    ]
   },
   {
@@ -680,10 +766,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The make of my new car is Tesla.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car():\n",
+    "    def __init__(self, make, model, year):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "my_car = Car('Tesla', 'Model X', '2021')\n",
+    "print('The make of my new car is %s.' % (my_car.make))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -702,13 +805,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# Helpful starter code\n",
     "from random import randrange\n",
-    "\n",
+    "class Dice():\n",
+    "    def number_of_dice(Dice):\n",
+    "        dice()\n",
+    "        instance1.roll(randrange)\n",
     "print(randrange(1,7)) # randomly generates a number between 1 and 6"
    ]
   },
