--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -168,29 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('c', 'a', 't'), ('d', 'o', 'g'), ('mouse', 'bat'), ('elephant', 'dog', 'whale', 'lion', 32), ('b', 'i', 'r', 'd'), (), ('m', 'o', 's', 'q', 'u', 'i', 't', 'o')]\n"
+      "['cat', 'dog', ['mouse', 'bat'], ['elephant', 'dog', 'whale', 'lion', 32], 'bird', [], 'mosquito']\n"
      ]
     }
    ],
    "source": [
     "#still working\n",
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
-    "# your code here\n",
-    "double_trouble = [tuple(word for word in elem if word != 'mosquito') for elem in double_trouble]\n",
-    "print(double_trouble)\n",
     "\n",
-    "#previously tried code\n",
-    "#for word in enumerate(double_trouble):\n",
-    " #   if str(word) == 'mosquito':\n",
-    "  #      double_trouble.remove(word)\n",
-    "#print(double_trouble)\n"
+    "for list in double_trouble:\n",
+    "    for element in list:\n",
+    "        if element == \"mosquito\":\n",
+    "            list.remove('mosquito')\n",
+    "print(double_trouble)\n"
    ]
   },
   {
@@ -428,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -489,12 +486,13 @@
     }
    ],
    "source": [
+    "#def prime_numbers(a,b):\n",
     "for num in range(0,101):\n",
     "    count = 0\n",
     "    if(num % 2 == 0):\n",
     "        count = count +1\n",
     "    else:\n",
-    "        print(num)"
+    "        print(num)\n"
    ]
   },
   {
@@ -574,14 +572,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Candy object at 0x000002867F7724F0>\n"
+      "1.5\n"
      ]
     }
    ],
@@ -594,7 +592,8 @@
     "        self.caramel = caramel\n",
     "    \n",
     "new_candy = Candy('sour', 'Warheads', False)\n",
-    "print(new_candy)    \n"
+    "new_candy.cost = 1.50\n",
+    "print(new_candy.cost)    \n"
    ]
   },
   {
@@ -714,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +734,7 @@
     "        print(f'{self.name}: {line}')\n",
     "        \n",
     "    # your static method goes here.\n",
+    "    @staticmethod\n",
     "    def static_method(x):\n",
     "        print(x)\n",
     "meryl = actress()\n",
