--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
     "        self.brand = brand\n",
     "        self.caramel = caramel\n",
     "    \n",
-    "new_candy = Candy('sour', 'Warheads', False)\n",
+    "new_candy = Candy()\n",
     "new_candy.cost = 1.50\n",
     "print(new_candy.cost)    \n"
    ]
