--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -80,26 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yellow\n",
-      "Blue\n",
-      "Green\n",
-      "Black\n",
-      "Purple\n"
+      "['Blue', 'Purple', 'Green', 'Yellow', 'Black']\n"
      ]
     }
    ],
    "source": [
-    "colors = {'blue', 'purple', 'green', 'yellow', 'black'}\n",
-    "for c in colors:\n",
-    "    colors = (c.capitalize())\n",
-    "    print (colors)"
+    "#FIXED (I hope!)\n",
+    "color_list = ['blue', 'purple', 'green', 'yellow', 'black']\n",
+    "\n",
+    "for c in range (0,5):\n",
+    "    color_list[c] = color_list[c].capitalize()\n",
+    "print(color_list)"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -123,11 +123,14 @@
     }
    ],
    "source": [
+    "#FIXED (I hope!)\n",
     "asterisk = 'My *compu*ter has go*ne craz***y an*d add*ed extra *symbols.*'\n",
     "# your code here\n",
-    "\n",
-    "asterisk = asterisk.replace('*', '')\n",
-    "print (asterisk)"
+    "eliminate = ''\n",
+    "for i in range(0,len(asterisk)):\n",
+    "    if asterisk[i] != '*':\n",
+    "        eliminate = eliminate + asterisk[i]\n",
+    "print(eliminate)"
    ]
   },
   {
@@ -168,26 +171,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cat', 'dog', ['mouse', 'bat'], ['elephant', 'dog', 'whale', 'lion', 32], 'bird', [], 'mosquito']\n"
+      "['cat', 'dog', ['mouse', 'bat'], ['elephant', 'dog', 'whale', 'lion', 32], 'bird', []]\n"
      ]
     }
    ],
    "source": [
-    "#still working\n",
+    "#FIXED (I hope!)\n",
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
     "\n",
-    "for list in double_trouble:\n",
-    "    for element in list:\n",
-    "        if element == \"mosquito\":\n",
-    "            list.remove('mosquito')\n",
-    "print(double_trouble)\n"
+    "element = 'mosquito'\n",
+    "while element in double_trouble:\n",
+    "    double_trouble.remove('mosquito')\n",
+    "    \n",
+    "while element in double_trouble[2]:\n",
+    "    double_trouble[2].remove('mosquito')\n",
+    "\n",
+    "while element in double_trouble[3]:\n",
+    "    double_trouble[3].remove('mosquito')\n",
+    "print(double_trouble)\n",
+    "\n",
+    "\n",
+    "#for list in double_trouble:\n",
+    "    #for element in list:\n",
+    "        #if element == \"mosquito\":\n",
+    "            #list.remove('mosquito')\n",
+    "#print(double_trouble)\n"
    ]
   },
   {
@@ -200,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -237,28 +254,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an integer 3\n",
-      "Enter another integer 3\n",
-      "0\n"
+      "6\n",
+      "-2\n",
+      "One number odd, one number even\n"
      ]
     }
    ],
    "source": [
-    "first = input('Enter an integer ')\n",
-    "second = input('Enter another integer ')\n",
-    "two_num = int(first) + int(second)\n",
+    "#FIXED...?\n",
+    "def two_numbers(i,j):\n",
+    "    if (i % 2) == 0:\n",
+    "        if (j % 2) == 0:\n",
+    "            x = i+j\n",
+    "            print(x)\n",
+    "            return x\n",
+    "        else:\n",
+    "            print('One number odd, one number even')\n",
+    "    elif (i % 2) != 0:\n",
+    "         if (j % 2) != 0:      \n",
+    "            x = i-j\n",
+    "            print(x)\n",
+    "            return x\n",
+    "         else:\n",
+    "            print('One number odd and one number even')\n",
     "\n",
-    "if (int(first) and int(second) % 2 == 0):\n",
-    "    print(int(first) + int(second))\n",
-    "elif (int(first) and int(second) % 2 != 0):\n",
-    "    print(int(first) - int(second))\n",
+    "two_numbers(2,4)\n",
+    "two_numbers(1,3)\n",
+    "two_numbers(4,1)\n",
+    "\n",
     "    "
    ]
   },
@@ -271,21 +301,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "thisstringhassomeweirdvalues02\n"
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'isalnum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2040/1126588991.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m      \u001b[1;31m#   if x[1]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mjumbled\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"this string has %^&! some weird values02\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m#all_alphanum = ''.join(x for x in character if x.isalnum())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2040/1126588991.py\u001b[0m in \u001b[0;36mjumbled\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mjumbled\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mjumbled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misalnum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcharacter\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misalnum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'isalnum'"
      ]
     }
    ],
    "source": [
-    "character = (\"this string has %^&! some weird values02\")\n",
-    "all_alphanum = ''.join(x for x in character if x.isalnum())\n",
-    "print(all_alphanum)\n"
+    "# this is SO wrong...please do not even try to regrade this one\n",
+    "\n",
+    "def jumbled(char):\n",
+    "    if jumbled.isalnum() == False:\n",
+    "        for i in char:\n",
+    "            x = ''.join(x for i in character if x.isalnum())\n",
+    "            \n",
+    "    print(x)\n",
+    "    \n",
+    "    #for i in range(0,len(x)):\n",
+    "     #   if x[1]\n",
+    "\n",
+    "jumbled(\"this string has %^&! some weird values02\")\n",
+    "\n",
+    "#all_alphanum = ''.join(x for x in character if x.isalnum())\n",
+    "#print(all_alphanum)\n"
    ]
   },
   {
@@ -376,19 +424,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function second_function at 0x000002867FA2A430>\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "#still working\n",
+    "#FIXED. I think this works...?\n",
     "# you do the first function\n",
     "def first_function(a,b):\n",
     "    return a + b\n",
@@ -396,16 +444,12 @@
     "# second function\n",
     "# Here's some starter code to avoid confusion.\n",
     "# Functions can be passed around like any other object. \n",
-    "def second_function(c):\n",
-    "    return c ** 2\n",
+    "def second_function(a,b,some_function):\n",
+    "    print(some_function(a,b))\n",
     "\n",
-    "equation = [first_function, second_function]\n",
-    "a = 1\n",
-    "b = 4\n",
-    "c = 5\n",
-    "\n",
-    "\n",
-    "print(second_function)\n",
+    "#testing\n",
+    "first_function(2,3)\n",
+    "second_function(2,3,first_function)\n",
     "\n"
    ]
   },
@@ -425,74 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n",
-      "51\n",
-      "53\n",
-      "55\n",
-      "57\n",
-      "59\n",
-      "61\n",
-      "63\n",
-      "65\n",
-      "67\n",
-      "69\n",
-      "71\n",
-      "73\n",
-      "75\n",
-      "77\n",
-      "79\n",
-      "81\n",
-      "83\n",
-      "85\n",
-      "87\n",
-      "89\n",
-      "91\n",
-      "93\n",
-      "95\n",
-      "97\n",
-      "99\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "#def prime_numbers(a,b):\n",
-    "for num in range(0,101):\n",
-    "    count = 0\n",
-    "    if(num % 2 == 0):\n",
-    "        count = count +1\n",
-    "    else:\n",
-    "        print(num)\n"
+    "#ugh, still wrong\n",
+    "def prime_numbers():\n",
+    "    prime = [x for x in range(1,101) if all(x%i for i in range(1,101))]\n",
+    "    print(prime)\n",
+    "\n",
+    "prime_numbers()"
    ]
   },
   {
@@ -805,18 +799,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "1\n"
      ]
     }
    ],
    "source": [
+    "#I think this is working...\n",
     "# Helpful starter code\n",
     "from random import randrange\n",
     "class Dice():\n",
